# Pushing-Medium

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  README.md  TESTING.md  pyproject.toml  run_tests.py  test_results_table.py
.github/workflows/: python-tests.yml
docs/latex/: all_formulas.tex  blockflow.tex  bodies.tex  differences.tex  flow-map-modelling.tex  formulae.tex  passed_tests.tex  pushing-medium-model-test-matrix.tex  skel-fmm-comparative.tex  skeletons.tex
docs/markdown/: alternative_gravity_formulas.md  differences.md  pushing_medium_comprehensive_documentation.md  pushing_medium_model_summary.md  pushing_medium_vs_gr_documentation.md  side_by_side.md  side_by_side_2.md
docs/txt/: blockflow.txt  bodies.txt  formula_comparison_condensed.txt  formula_sheet.txt  formulae.txt  gr-vs-pushing.txt  gr_equivalence_equations.txt  key_formulae.txt
programs/demos/: README.md  demo2.py  demo3.py  demo4.py  demo7.py  full_demo.py  full_demo_2.py  lagrange_1.py  plasma_flythrough_demo2.py
programs/demos/BNN/: always_plastic_patches
programs/demos/CNN/: mnist-extended.py  mnist-flow.py  multi-dataset-training-benchmark.py  nn-benchmark-oneswitch.py  pytorch_classifier_with_pushing-medium_flow_block.py
programs/demos/benchmarks/: README.md
programs/demos/benchmarks/comparative/: nbody_rays_side_by_side.py  pushing_medium_nbody_rays.py
programs/demos/benchmarks/showcase/: pm_nbody_skeleton_demo.py
programs/demos/graphics/: 3d_raytracing_with_progress_bar.py  raytracing0.py
programs/demos/machine_learning/: README.md  multi_model_benchmark.ipynb
programs/demos/machine_learning/BNN/: BNN-Minimal.py  pmflow_bnn_always_plastic.py  pmflow_bnn_prototype.py  pmflow_bnn_prototype_progress_patch
programs/demos/machine_learning/CNN/: mnist-benchmark2.py  mnist_benchmark_interactive.ipynb
programs/demos/machine_learning/nn_lib/: pmflow_cnn.py  pyproject.toml
programs/demos/machine_learning/nn_lib/pmflow_bnn/: __init__.py  baselines.py  baselnes.py  factory.py
programs/demos/machine_learning/nn_lib/tests/: test_smoke.py
programs/demos/machine_learning/nn_lib_v2/: LICENSE  MANIFEST.in  README.md  comprehensive_library_test.py  debug_scaling.py  library_test_report.txt  meaningful_evaluation_demo.py  optimized_testing.py  pmflow_cnn.py  pyproject.toml  setup.py  test_v2.py
programs/demos/machine_learning/nn_lib_v2/pmflow_bnn/: __init__.py  baselines.py  bnn.py  evaluation.py  factory.py  pmflow.py  utils.py
programs/demos/machine_learning/nn_lib_v2/tests/: test_pmflowcnn.py
programs/demos/machine_learning/pygame_demos/: README.md  foraging_arena.py  live_synapse_explorer.py  plasticity_pong.py  sensory_remapping.py
programs/demos/machine_learning/text_demos/: README.md  (+2 more)
programs/demos/nn_lib/: README.md  demo_train.py  setup.py
programs/demos/physics/: README.md  demo1.py  demo5.py  demo6.py  grav_lensing.py  lagrange_2.py  plasma_flythrough_demo.py  plasma_index_animate.py  pushing_medium.py
programs/demos/propaganda_demos/: demos.txt  pm_nbody_rays_with_skeleton.py  pm_switchboard_nbody_rays.py
programs/demos/visualization/: README.md  skeleton_and_flow.py  skeleton_finder.py
programs/junk/: README.md  benchmark_harness.py  formula-comp-table.py  formula_sheet.py  full-formula-list.py  notsure.py  table1.py  three_body_flow.py
programs/misc/: minimal_vector_only.py  smart_3body_calc.py  vector_skeleton.py
python_notebooks/: 0.2.0_cnn_library_test.ipynb  0.2.0_library_test.ipynb  0.2.0_subset_standalone_tests.ipynb  cuda-test.ipynb
src/galaxy_dynamics/: __init__.py  compare.py  data.py  fitting.py  halos.py  relations.py  rotation.py
src/general_relativity/: __init__.py  classical.py
src/pmflow_bnn/: __init__.py  baselines.py  bnn.py  factory.py  pmflow.py  utils.py
src/pushing_medium/: __init__.py  core.py
tests/: calibration.json  conftest.py  test_calibration_mu.py  test_calibration_values.py  test_deflection_convergence.py  test_fermat_helper.py  test_fitting.py  test_galaxy_rotation.py  test_gr_classical.py  test_halo_fitting.py  test_index_from_density.py  test_iterative_deflection.py  test_joint_disk_halo_fitting.py  test_medium_vs_halo_comparison.py  test_model_comparison.py  test_moving_lens_deflection.py  test_moving_lens_numeric.py  test_passed_benchmarks.py  test_plummer_helpers.py  test_pm_core.py  test_pm_vs_gr.py  test_population_fitting.py  test_ppn_parameters.py  test_scaling_relations.py  test_sparc_loader.py  test_sparc_real_loader.py  test_strong_field_trend.py  test_weak_bending_numeric.py
tests/data/: mock_sparc.csv  sparc_sample.csv
tests/fixtures/: calibration.py
(+14 files in other folders)
