[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "pmflow_bnn"
version = "0.1.0"
description = "PMFlow dynamics and PMFlow-BNN models for PyTorch"
readme = "programs/demos/nn_lib/README.md"
requires-python = ">=3.8"
authors = [ { name = "Tristan Mumford" }, { name = "Copilot" } ]
license = { text = "Public Domain" }
dependencies = [
  "torch>=1.10",
  "torchvision",
  "numpy",
  "matplotlib",
  "tqdm"
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
